--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "private": false,
   "scripts": {
     "dev": "pnpm build && pnpm --filter ./packages/docs dev",
-    "d": "nvm use 20.10.0 && pnpm dev",
+    "d": "pnpm --filter ./packages/docs dev",
     "build": "pnpm --filter ./packages/sketch-ruler build",
     "build:demo": "pnpm build && pnpm --filter ./packages/docs build",
     "precommit": "lint-staged",
     "clean": "npx rimraf node_modules",
     "clean:cache": "npx rimraf node_modules/.cache",
-    "eslint": "eslint .",
+    "lint": "esprint check --workers=4",
+    "ci-lint": "esprint check --workers=2",
+    "ci-pretty-check": "prettier --check .",
     "lint:format": "prettier --write --loglevel warn \"packages/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
-    "lint:style": "stylelint --fix \"./packages/**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "lint:lint-staged": "lint-staged -c ",
     "changelog": "pnpm --filter ./packages/sketch-ruler changelog",
     "release": "pnpm --filter ./packages/sketch-ruler release"
   },
@@ -46,10 +46,12 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.11.1",
     "canvas": "^2.11.2",
+    "esprint": "^3.6.0",
     "compare-func": "^2.0.0",
     "conventional-changelog": "^6.0.0",
     "conventional-changelog-cli": "^5.0.0",
-    "eslint": "^9.11.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "eslint": "^9.11.0",
     "gh-pages": "^6.1.1",
     "husky": "^9.1.6",
     "jsdom": "^25.0.1",
@@ -59,14 +61,14 @@
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
     "release-it": "^17.6.0",
+    "vue-eslint-parser": "^9.4.3",
     "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.79.3",
     "selecto": "^1.26.3",
-    "stylelint": "^16.9.0",
-    "stylelint-config-html": "^1.1.0",
-    "stylelint-config-recommended": "^14.0.1",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-order": "^6.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier-vue": "^5.0.0",
+    "globals": "^15.9.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
     "vite-plugin-dts": "4.2.2",
@@ -74,7 +76,6 @@
     "vue": "^3.5.10",
     "vue-tsc": "^2.1.6",
     "vue3-moveable": "^0.28.0",
-    "framework-utils": "^1.1.0",
     "@daybrush/utils": "^1.13.0",
     "element-plus": "^2.8.4",
     "vue-router": "^4.4.5",
