--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "precommit": "lint-staged",
     "clean": "npx rimraf node_modules",
     "clean:cache": "npx rimraf node_modules/.cache",
-    "lint": "esprint check --workers=4",
-    "ci-lint": "esprint check --workers=2",
+    "lint": "esprint check --workers=4 --fix",
     "ci-pretty-check": "prettier --check .",
     "lint:format": "prettier --write --loglevel warn \"packages/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
     "changelog": "pnpm --filter ./packages/sketch-ruler changelog",
