--- a/packages/sketch-ruler/package.json
+++ b/packages/sketch-ruler/package.json
@@ -3,6 +3,7 @@
   "version": "2.2.2",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
+  "type": "module",
   "private": false,
   "files": [
     "lib",
@@ -22,7 +23,7 @@
   "style": "lib/style.css",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": " vite build",
+    "build": "vite build",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "release": "release-it"
   },
