--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,18 +14,20 @@ jobs:
         node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v1
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          bun-version: latest
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
       - name: Install and Build 🔧
         run: |
-          bun i
-          bun run build:demo
+          pnpm install
+          pnpm build:demo
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./packages/docs/dist # The folder the action should deploy.
-
           github_token: ${{ secrets.GITHUB_TOKEN }}
