--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,21 +13,19 @@ jobs:
       matrix:
         node-version: [20.x]
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          bun-version: latest
 
       - name: Install and Build 🔧
         run: |
-          pnpm install
-          pnpm build:demo
+          bun i
+          bun run build:demo
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./packages/docs/dist # The folder the action should deploy.
+
           github_token: ${{ secrets.GITHUB_TOKEN }}
