--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,6 +16,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install pnpm
         uses: pnpm/action-setup@v2
+      - name: Set node
+            uses: actions/setup-node@v3
+            with:
+              cache: pnpm
 
       - name: Install and Build 🔧
         run: |
