--- a/packages/sketch-ruler/package.json
+++ b/packages/sketch-ruler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "type": "module",
@@ -18,8 +18,8 @@
     "url": "https://gitee.com/majun2232/vue3-sketch-Ruler"
   },
   "sideEffects": false,
-  "main_": "lib/index.js",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
+  "main_": "src/index.ts",
   "style": "lib/style.css",
   "types": "lib/index.d.ts",
   "scripts": {
