--- a/packages/sketch-ruler/package.json
+++ b/packages/sketch-ruler/package.json
@@ -18,8 +18,8 @@
     "url": "https://gitee.com/majun2232/vue3-sketch-Ruler"
   },
   "sideEffects": false,
-  "main1": "lib/index.js",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
+  "main1": "src/index.ts",
   "style": "lib/style.css",
   "types": "lib/index.d.ts",
   "scripts": {
