--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "vue3-sketch-ruler": "workspace:*",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
-    "@release-it/conventional-changelog": "^8.0.2",
     "@types/node": "^22.7.4",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
@@ -66,7 +65,6 @@
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
-    "release-it": "^17.6.0",
     "vue-eslint-parser": "^9.4.3",
     "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.79.3",
@@ -87,7 +85,11 @@
     "highlight.js": "^11.10.0",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.0.2",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.2.2",
+    "chalk": "4.1.0",
+    "semver": "^7.5.4",
+    "enquirer": "^2.4.1",
+    "minimist": "^1.2.8"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
