--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -132,5 +132,6 @@
       "source.fixAll.eslint": "never",
       "source.fixAll.stylelint": "explicit"
     }
-  }
+  },
+  "i18n-ally.localesPaths": ["packages/common/i18n", "packages/common/i18n/src/locales"]
 }
