--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "dev": "vite  --host 0.0.0.0",
     "build": "vite build"
+  },
+  "devDependencies": {
+    "es-drager":"^1.2.13"
   }
 }
