--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "panzoom"
   ],
   "devDependencies": {
-    "simple-panzoom": "^1.0.8",
+    "simple-panzoom": "workspace:*",
     "root-common": "workspace:*",
     "vue3-sketch-ruler": "workspace:*",
     "@babel/preset-env": "^7.25.4",
@@ -66,16 +66,17 @@
     "pretty-quick": "^4.0.0",
     "vue-eslint-parser": "^9.4.3",
     "rollup-plugin-banner": "^0.2.1",
-    "sass": "^1.79.3",
+    "sass": "^1.94.1",
     "selecto": "^1.26.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-prettier-vue": "^5.0.0",
     "globals": "^15.9.0",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vite-plugin-dts": "4.2.2",
-    "vue": "^3.5.10",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^4.0.1",
+    "vue": "^3.5.24",
     "vue-tsc": "^2.1.6",
     "vue3-moveable": "^0.28.0",
     "@daybrush/utils": "^1.13.0",
