--- a/package.json
+++ b/package.json
@@ -40,54 +40,54 @@
     "simple-panzoom": "workspace:*",
     "root-common": "workspace:*",
     "vue3-sketch-ruler": "workspace:*",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-typescript": "^7.24.7",
-    "@types/node": "^22.7.4",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vue/babel-plugin-jsx": "^1.2.5",
-    "@element-plus/icons-vue": "^2.3.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.11.1",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/babel-plugin-jsx": "^2.0.1",
+    "@element-plus/icons-vue": "^2.3.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
     "esprint": "^3.6.0",
     "compare-func": "^2.0.0",
-    "conventional-changelog": "^6.0.0",
+    "conventional-changelog": "^7.1.1",
     "conventional-changelog-cli": "^5.0.0",
-    "eslint-plugin-vue": "^9.28.0",
-    "eslint": "^9.11.0",
-    "gh-pages": "^6.1.1",
-    "husky": "^9.1.6",
-    "jsdom": "^25.0.1",
-    "lint-staged": "^15.2.10",
+    "eslint-plugin-vue": "^10.5.1",
+    "eslint": "^9.39.1",
+    "gh-pages": "^6.3.0",
+    "husky": "^9.1.7",
+    "jsdom": "^27.2.0",
+    "lint-staged": "^16.2.6",
     "lodash": "^4.17.21",
-    "postcss-html": "^1.7.0",
-    "prettier": "^3.3.3",
-    "pretty-quick": "^4.0.0",
-    "vue-eslint-parser": "^9.4.3",
+    "postcss-html": "^1.8.0",
+    "prettier": "^3.6.2",
+    "pretty-quick": "^4.2.2",
+    "vue-eslint-parser": "^10.2.0",
     "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.94.1",
     "selecto": "^1.26.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-prettier-vue": "^5.0.0",
-    "globals": "^15.9.0",
+    "globals": "^16.5.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^4.0.1",
+    "vitest": "^4.0.10",
     "vue": "^3.5.24",
-    "vue-tsc": "^2.1.6",
+    "vue-tsc": "^3.1.4",
     "vue3-moveable": "^0.28.0",
     "@daybrush/utils": "^1.13.0",
-    "element-plus": "^2.8.4",
-    "vue-router": "^4.4.5",
-    "highlight.js": "^11.10.0",
-    "pinia": "^2.2.2",
-    "pinia-plugin-persistedstate": "^4.0.2",
-    "vue-i18n": "^9.2.2",
-    "chalk": "4.1.0",
-    "semver": "^7.5.4",
+    "element-plus": "^2.11.8",
+    "vue-router": "^4.6.3",
+    "highlight.js": "^11.11.1",
+    "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
+    "vue-i18n": "^11.1.12",
+    "chalk": "^5.6.2",
+    "semver": "^7.7.3",
     "enquirer": "^2.4.1",
     "minimist": "^1.2.8"
   },
