--- a/packages/simple-panzoom/tsconfig.json
+++ b/packages/simple-panzoom/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "extends": "../../tsconfig.common.json",
-
   "compilerOptions": {
     "outDir": "lib",
-    "allowImportingTsExtensions": true,
     "emitDeclarationOnly": true,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "allowJs": false,
-    "types": ["vitest", "node"]
+    "allowJs": false
   },
-  "include": ["**/*.vue", "**/*.ts", "**/*.json"],
-  "exclude": ["test", "**/*.spec.ts", "vite.config.ts", "vitest.config.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["test", "demo", "**/*.spec.ts", "vite.config.ts", "vitest.config.ts"]
 }
