--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,6 +9,7 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "es-drager": "^1.2.14"
+    "es-drager": "^1.3.2",
+    "framework-utils": "^1.1.0"
   }
 }
