--- a/packages/simple-panzoom/package.json
+++ b/packages/simple-panzoom/package.json
@@ -3,9 +3,18 @@
   "version": "2.0.1",
   "type": "module",
   "private": true,
-  "files": ["src", "lib"],
-  "main": "src/panzoom.ts",
-  "types": "src/types.ts",
+  "files": [
+    "lib"
+  ],
+  "main": "lib/panzoom.js",
+  "types": "lib/panzoom.d.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/panzoom.d.ts",
+      "import": "./lib/panzoom.js",
+      "require": "./lib/panzoom.cjs"
+    }
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -17,18 +26,12 @@
     "zoom"
   ],
   "scripts": {
-     "dev": "vite",
     "test": "vitest run",
-    "build": "vite build",
+    "build": "tsup src/panzoom.ts --format esm,cjs --treeshake --clean --out-dir lib && tsc -p tsconfig.json",
     "test:watch": "vitest"
   },
   "devDependencies": {
-    "vitest": "^4.0.1",
-    "sass": "^1.94.1",
-    "uglify-js": "^3.18.0",
-    "vite": "^7.2.2",
-    "vite-plugin-dts": "^4.5.4",
-    "vue": "^3.5.24",
-    "vue-tsc": "^3.1.4"
+    "tsup": "^8.5.1",
+    "vitest": "^4.0.10"
   }
 }
