--- a/packages/sketch-ruler/package.json
+++ b/packages/sketch-ruler/package.json
@@ -18,16 +18,15 @@
     "url": "https://gitee.com/majun2232/vue3-sketch-Ruler"
   },
   "sideEffects": false,
-  "main1": "lib/index.js",
-  "main": "src/index.ts",
+  "main1": "src/index.ts",
+  "main": "lib/index.js",
   "style": "lib/style.css",
   "types": "lib/index.d.ts",
   "exports": {
     ".": {
       "types": "./lib/index.d.ts",
       "import": "./lib/index.js",
-      "require": "./lib/index.umd.cjs",
-      "style": "./lib/style.css"
+      "require": "./lib/index.umd.cjs"
     },
     "./lib/style.css": "./lib/style.css"
   },
