--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,47 +9,45 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          # cache: 'pnpm'
+          cache: 'pnpm'
+
       - name: Get pnpm store directory
         id: pnpm-cache
         run: |
           echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
 
-      - name: Install simple-panzoom deps
-        run:  pnpm i --no-frozen-lockfile
-        working-directory: packages/simple-panzoom
-
-      - name: Install sketch-ruler deps
+      - name: Install dependencies
         run: pnpm i --no-frozen-lockfile
-        working-directory: packages/sketch-ruler
 
       - name: Build simple-panzoom
-        run: pnpm run build
-        working-directory: packages/simple-panzoom
+        run: pnpm --filter ./packages/simple-panzoom build
 
       - name: Build sketch-ruler
-        run: pnpm run build
-        working-directory: packages/sketch-ruler
+        run: pnpm --filter ./packages/sketch-ruler build
 
       - name: Test simple-panzoom
-        run: pnpm run test
-        working-directory: packages/simple-panzoom
+        run: pnpm --filter ./packages/simple-panzoom test
 
       - name: Test sketch-ruler
-        run: pnpm run test
-        working-directory: packages/sketch-ruler
+        run: pnpm --filter ./packages/sketch-ruler test
 
       - name: Build docs
-        run: pnpm run build 
-        working-directory: packages/docs
+        run: pnpm build:demo
 
       - name: Deploy gh-pages
         uses: peaceiris/actions-gh-pages@v3
