--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          # cache: 'pnpm'  # 关闭 pnpm 缓存以避免在无锁文件情况下报错
 
       - name: Get pnpm store directory
         id: pnpm-cache
