--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "es-drager": "^1.3.2",
-    "framework-utils": "^1.1.0"
+    "framework-utils": "^1.1.0",
+    "vue3-sketch-ruler": "workspace:*"
   }
 }
